Shared Layout on every View

--- a/Views/Reciept/index.cshtml
+++ b/Views/Reciept/index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -11,8 +11,8 @@
     <title>index</title>
 </head>
 <body>
-<h2>
-    Reciepts
-</h2>
+    <h2>
+        Reciepts
+    </h2>
 </body>
 </html>
