--- a/Views/Signin/index.cshtml
+++ b/Views/Signin/index.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
+
 
 <!DOCTYPE html>
 
@@ -11,8 +12,8 @@
     <title>index</title>
 </head>
 <body>
-<h2>
-    Signin
-</h2>
+    <h2>
+        Signin
+    </h2>
 </body>
 </html>
