--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="@Url.Action("Index", "Reciept")">Reciept</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("Index", "Signin")">Signin</a>
+                <a class="nav-link" href="@Url.Action("Login", "Signin")">Signin</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index", "Stats")">Stats</a>
