Created the order form and updated Receipt model

--- a/Views/Order/index.cshtml
+++ b/Views/Order/index.cshtml
@@ -3,16 +3,46 @@
     Layout = "_Layout";
 }
 
-<!DOCTYPE html>
+<div>
+    <h1>Welcome User!</h1>
+</div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>index</title>
-</head>
-<body>
-<h2>
-    Order
-</h2>
-</body>
-</html>
+<form>
+    <div class="form-group">
+        <label for="exampleFormControlInput1">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="form-group">
+        <label for="ItemSelect">Catalog</label>
+        <select class="form-control" id="ItemSelect">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+    </div>
+    <div>
+        Price: $0.00
+    </div>
+    <div class="form-group">
+        <label for="ShipSelect">Shipping Method</label>
+        <select class="form-control" id="ShipSelect">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+    </div>
+    <div>
+        Shipping Cost
+    </div>
+    <div>
+        Tax (HST 13%): $0.00
+    </div>
+    <div>
+        Total Price: $0.00
+    </div>
+
+</form>
