--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <a class="nav-link" asp-controller="Order" asp-action="Index">Order</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Receipt" asp-action="Index">Reciept</a>
+                <a class="nav-link" asp-controller="Receipt" asp-action="Index">Receipt</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Signin" asp-action="Login">Signin</a>
