--- a/Views/Signin/login.cshtml
+++ b/Views/Signin/login.cshtml
@@ -1,19 +1,27 @@
-﻿
+﻿@model Credentials
 @{
     Layout = "_Layout";
 }
 
+<div class="container">
+    <div style="height: 5vh"></div>
+    <div class="text-center">
+        <h1 class="display-4">Login</h1>
+    </div>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>index</title>
-</head>
-<body>
-    <h2>
-        Signin
-    </h2>
-</body>
-</html>
+    <form asp-action="Login" method="post">
+        <div class="form-group">
+            <label asp-for="Email">Email</label>
+            <input class="form-control" type="email" asp-for="Email" placeholder="Email Address" />
+            <span class="text-danger" asp-validation-for="Email"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password">Password</label>
+            <input class="form-control" type="password" asp-for="Password" placeholder="Password" />
+            <span class="text-danger" asp-validation-for="Password"></span>
+        </div>
+        <div class="text-center">
+            <button class="btn btn-primary btn-block" type="submit">Login</button>
+        </div>
+    </form>
+</div>
