--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,16 +5,19 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet">
-
-    <link href="/lib/twitter-bootstrap/js/bootstrap.js" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/lib/twitter-bootstrap/css/bootstrap.css">
+    <script src="/lib/twitter-bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+
         <a class="navbar-brand" href="#">Financial Enterprise Genie</a>
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -27,10 +30,16 @@
                     <a class="nav-link" asp-controller="Receipt" asp-action="Index">Receipt</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Signin" asp-action="Login">Signin</a>
+                    <a class="nav-link" asp-controller="Stats" asp-action="Index">Stats</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Signin" asp-action="Login">Sign In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Stats" asp-action="Index">Stats</a>
+                    <a class="nav-link" asp-controller="Signup" asp-action="Signup">Sign Up</a>
                 </li>
             </ul>
         </div>
