--- a/Views/Signup/signup.cshtml
+++ b/Views/Signup/signup.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Credentials
 @{
-    Layout = "_Layout";
+    ViewData["Title"] = "signup";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
@@ -9,10 +10,10 @@
         <div class="col-6">
             <div style="height: 5vh"></div>
             <div class="text-center">
-                <h1 class="display-4">Login</h1>
+                <h1 class="display-4">Sign Up!</h1>
             </div>
 
-            <form asp-action="Login" method="post">
+            <form asp-action="Signup" method="post">
                 <div class="form-group">
                     <label asp-for="Email">Email</label>
                     <input class="form-control" type="email" asp-for="Email" placeholder="Email Address" />
@@ -21,13 +22,14 @@
                 <div class="form-group">
                     <label asp-for="Password">Password</label>
                     <input class="form-control" type="password" asp-for="Password" placeholder="Password" />
-                    <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
                 <div class="form-group">
-                    <a asp-controller="Signup" asp-action="Signup">Not a member already? Sign up!</a>
+                    <label for="_confirmPassword">Confirm Password</label>
+                    <input class="form-control" type="password" name="_confirmPassword" placeholder="Confirm Password" />
+                    <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-primary btn-block" type="submit">Login</button>
+                    <button class="btn btn-primary btn-block" type="submit">Sign Up</button>
                 </div>
             </form>
         </div>
@@ -35,3 +37,4 @@
     </div>
 
 </div>
+
