Added Signup Form

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,10 +36,10 @@
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Signin" asp-action="Login">Sign In</a>
+                    <a class="nav-link" asp-controller="Signin" asp-action="LoginForm">Sign In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Signup" asp-action="Signup">Sign Up</a>
+                    <a class="nav-link" asp-controller="Signup" asp-action="SignupForm">Sign Up</a>
                 </li>
             </ul>
         </div>
