--- a/Views/Signin/loginForm.cshtml
+++ b/Views/Signin/loginForm.cshtml
@@ -24,7 +24,7 @@
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
                 <div class="form-group">
-                    <a asp-controller="Signup" asp-action="Signup">Not a member already? Sign up!</a>
+                    <a asp-controller="Signup" asp-action="SignupForm">Not a member already? Sign up!</a>
                 </div>
                 <div class="text-center">
                     <button class="btn btn-primary btn-block" type="submit">Login</button>
