--- a/Views/Signin/loginForm.cshtml
+++ b/Views/Signin/loginForm.cshtml
@@ -12,7 +12,7 @@
                 <h1 class="display-4">Login</h1>
             </div>
 
-            <form asp-action="Login" method="post">
+            <form asp-action="LoginForm" method="post">
                 <div class="form-group">
                     <label asp-for="Email">Email</label>
                     <input class="form-control" type="email" asp-for="Email" placeholder="Email Address" />
