--- a/Views/Signin/loginForm.cshtml
+++ b/Views/Signin/loginForm.cshtml
@@ -24,6 +24,7 @@
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
                 <div class="form-group">
+                    <a asp-controller="Signin" asp-action="ForgotPassword">Forgot Password</a><br />
                     <a asp-controller="Signup" asp-action="SignupForm">Not a member already? Sign up!</a>
                 </div>
                 <div class="text-center">
