Updated navbar appearance. Updated login. Updated forgot password. Added css classes. Added form layout.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,12 +5,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css?id=1234" />
     <link rel="stylesheet" href="/lib/twitter-bootstrap/css/bootstrap.css">
     <script src="/lib/twitter-bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-light bg-grey">
 
         <a class="navbar-brand" href="#">Financial Enterprise Genie</a>
         
