Updated Stats Index. Stats Index now using layout.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/main.css?id=1234" />
     <link rel="stylesheet" href="/lib/twitter-bootstrap/css/bootstrap.css">
     <script src="/lib/twitter-bootstrap/js/bootstrap.js"></script>
+
+    @RenderSection("head", required: false)
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-grey">
