--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-grey">
 
-        <a class="navbar-brand" href="#">Financial Enterprise Genie</a>
+        <a class="navbar-brand" asp-controller="Home" asp-action="Index">Financial Enterprise Genie</a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
