--- a/Views/Signup/signupForm.cshtml
+++ b/Views/Signup/signupForm.cshtml
@@ -12,22 +12,22 @@
                 <div class="form-group">
                     <label asp-for="Email">Email</label>
                     <input class="form-control" type="email" asp-for="Email" placeholder="Email Address" />
-                    <span class="text-danger" asp-validation-for="Email"></span>
+                    <span class="text-danger small" asp-validation-for="Email"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ConfirmEmail"></label>
                     <input class="form-control" type="email" asp-for="ConfirmEmail" placeholder="Confirm Email Address" />
-                    <span class="text-danger" asp-validation-for="ConfirmEmail"></span>
+                    <span class="text-danger small" asp-validation-for="ConfirmEmail"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password"></label>
                     <input class="form-control" type="password" asp-for="Password" placeholder="Password" />
-                    <span class="text-danger" asp-validation-for="Password"></span>
+                    <span class="text-danger small" asp-validation-for="Password"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ConfirmPassword"></label>
                     <input class="form-control" type="password" asp-for="ConfirmPassword" placeholder="Confirm Password" />
-                    <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                    <span class="text-danger small" asp-validation-for="ConfirmPassword"></span>
                 </div>
             </div>
             <div class="col">
@@ -35,39 +35,39 @@
                     <label asp-for="SecurityQuestoin"></label>
                     <select class="form-control" type="text" asp-for="SecurityQuestoin" asp-items="new SelectList(Credentials.SecurityQuestions)">
                     </select>
-                    <span class="text-danger" asp-validation-for="SecurityQuestoin"></span>
+                    <span class="text-danger small" asp-validation-for="SecurityQuestoin"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="SecurityAnswer"></label>
                     <input class="form-control" type="text" asp-for="SecurityAnswer" placeholder="Security Answer" />
-                    <span class="text-danger" asp-validation-for="SecurityAnswer"></span>
+                    <span class="text-danger small" asp-validation-for="SecurityAnswer"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="FirstName"></label>
                     <input class="form-control" type="text" asp-for="FirstName" placeholder="First Name" />
-                    <span class="text-danger" asp-validation-for="FirstName"></span>
+                    <span class="text-danger small" asp-validation-for="FirstName"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="LastName"></label>
                     <input class="form-control" type="text" asp-for="LastName" placeholder="Last Name" />
-                    <span class="text-danger" asp-validation-for="LastName"></span>
+                    <span class="text-danger small" asp-validation-for="LastName"></span>
                 </div>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Address"></label>
             <input class="form-control" type="text" asp-for="Address" placeholder="Address" />
-            <span class="text-danger" asp-validation-for="Address"></span>
+            <span class="text-danger small" asp-validation-for="Address"></span>
         </div>
         <div class="form-group">
             <label asp-for="CreditCardNumber"></label>
             <input class="form-control" type="text" asp-for="CreditCardNumber" placeholder="XXXX-XXXX-XXXX-XXXX" />
-            <span class="text-danger" asp-validation-for="CreditCardNumber"></span>
+            <span class="text-danger small" asp-validation-for="CreditCardNumber"></span>
         </div>
         <div class="form-group">
             <label asp-for="DateOfBirth"></label>
             <input class="form-control" type="date" asp-for="DateOfBirth" placeholder="Date of Birth" />
-            <span class="text-danger" asp-validation-for="DateOfBirth"></span>
+            <span class="text-danger small" asp-validation-for="DateOfBirth"></span>
         </div>
         <div class="text-center">
             <button class="btn btn-info btn-block" type="submit">Sign Up</button>
