Touched up Confirmation and Order views

--- a/Views/Order/Confirmation.cshtml
+++ b/Views/Order/Confirmation.cshtml
@@ -10,37 +10,41 @@
 
         padding-bottom: 2vh
     }
+    h2 {
+        padding-bottom: 2vh
+    }
 </style>
 <div style="height: 5vh"></div>
-    <div class="text-center container" >
-        <h1 class="test">Confirm Order</h1>
-        <div class="test">
-
-            <div>
-                <p>@Model.Item.ProductName | $@Math.Round(Model.Item.Price, 2) each | @Model.Quantity 
-                    @if (Model.Quantity > 1)
-                    {
-                        <span>units</span>
-                    }
-                    else
-                    {
-                        <span>unit</span>
-                    }
-                    </p>
-
-                <label>Shipping Method: @Model.Distributor.ShippingMethod | @Model.Distributor.TimeToShip
-                    @if (Model.Distributor.TimeToShip > 1)
-                    {
-                        <span>days</span>
-                    }
-                    else
-                    {
-                        <span>day</span>
-                    }
-                    </label>
-            </div>
+<div class="text-center container">
+    <h1 class="test">Confirm Order</h1>
+    <div class="row form-block border bg-light">
+        <div class="col">
+            <h2>Products</h2>
+            <p>
+                @Model.Item.ProductName | $@Model.Item.Price each | @Model.Quantity
+                @if (Model.Quantity > 1)
+                {
+                    <span>units</span>
+                }
+                else
+                {
+                    <span>unit</span>
+                }
+            </p>
+            <label>
+                Shipping Method: @Model.Distributor.ShippingMethod | @Model.Distributor.TimeToShip
+                @if (Model.Distributor.TimeToShip > 1)
+                {
+                    <span>days</span>
+                }
+                else
+                {
+                    <span>day</span>
+                }
+            </label>
         </div>
-        <div class="test">
+        <div class="col">
+            <h2>Delivery Estimate</h2>
             <div>
                 <label>
                     Today's Date: @Model.Date
@@ -48,14 +52,13 @@
                 <p>Estimated Delivery Date: @Model.ReceiveDate</p>
             </div>
         </div>
-        <div class="test">
+        <div class="col">
+            <h2>Order Price</h2>
             <div>
                 <label>Shipping Price: $@Math.Round(Model.Distributor.ShipPrice, 2)</label>
                 <p>Tax: $@Model.Tax</p>
                 <p>Total: $@Model.Total</p>
             </div>
         </div>
-
-
-
     </div>
+</div>
