--- a/Views/Order/index.cshtml
+++ b/Views/Order/index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FinancialEnterpriseGenie.Models.ItemDistributorList
 @{
-    Layout = "_Layout";
+    Layout = "_formLayout";
 }
 <style>
     .form-group {
@@ -27,8 +27,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="quantity">Amount</label>
-                <input type="number" id="quantity" name="quantity"/>
+                <label for="quantity">Amount<br/></label> 
+                <input class="form-control" type="number" id="quantity" name="quantity"/>
             </div>
 
             <div class="form-group">
